--- a/injectr.css
+++ b/injectr.css
@@ -2,7 +2,6 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: #e6e6e6;
 	top: 0;
 	left: 0;
 	z-index: 99999;
@@ -17,6 +16,9 @@
 	padding: 1em;
 	font-size: 16px;
 	border-radius: 0 0 1em 1em;
+	border: 1px solid #CCC;
+	border-top: none;
+	box-shadow: 0px 0px 5px #AAA;
 }
 
 #injectr-txt {
